[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["sasuseso <sinai471530@gmail.com>"]
edition = "2018"
repository = "https://github.com/sasuseso/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
